Scrollbar fixes, documentation

--- a/src/css/component/container.less
+++ b/src/css/component/container.less
@@ -34,8 +34,4 @@
     width: 100vw;
     scrollbar-gutter: stable;
   }
-
-  #root {
-    width: 100vw;
-  }
 }
