--- a/src/css/component/scrollbar.less
+++ b/src/css/component/scrollbar.less
@@ -30,7 +30,8 @@
     scrollbar-width: var(--scrollbar-width);
   }
 
-  #root {
+  #root,
+  #root * {
     --scrollbar-color-track: transparent;
   }
 }
